--- a/style.css
+++ b/style.css
@@ -19,7 +19,8 @@ header {
 }
 body {
   font-family: "Roboto", sans-serif;
-  margin: 0;
+  margin: 4%;
+  width: 96%;
 }
 main .city {
   display: flex;
@@ -32,6 +33,9 @@ main .city {
 }
 main .city i {
   font-size: 1.5rem;
+}
+.decorationNone {
+  text-decoration: none;
 }
 
 /* EXPLORER */
@@ -65,30 +69,95 @@ main .city i {
 
 /* TUTO */
 
-.fonction {
-    width: 80%;
-    padding: 1.4rem 2.3rem;
-    background-color: #f6f6f6;
-    text-align: center;
-    border-radius: 1rem;
-    font-weight: bold;
-    margin: 1rem;
-    box-shadow: 1px 8px 17px -7px rgba(0, 0, 0, 0.75);
-    
-    
+.tuto li {
+  list-style-type: none;
+  flex-grow: 1;
+  padding: 1.5rem 2rem;
+  background-color: #f6f6f6;
+  text-align: center;
+  border-radius: 1rem;
+  font-weight: bold;
+  margin: 1rem;
+  box-shadow: 1px 8px 17px -7px rgba(0, 0, 0, 0.75);
+  position: relative;
+}
+.number {
+  background-color: #9356dc;
+  color: white;
+  width: 2rem;
+  height: 2rem;
+  border-radius: 50%;
+  display: grid;
+  place-items: center;
+  position: absolute;
+  bottom: 1rem;
+  left: -1rem;
 }
 .tuto i {
-    margin-right: 3rem;
-    color: rgb(187, 173, 173);
+  margin-right: 1rem;
+  color: rgb(187, 173, 173);
 }
 .tuto i:hover {
-    color: #9356dc;
+  color: #9356dc;
 }
 .tuto {
-    margin-top: 1.5rem;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+.tuto ol {
+  gap: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  text-align: center;
+}
+@media screen and (max-width: 1000px) {
+  .tuto ol {
+    flex-direction: column;
+  }
+  h2 {
     display: flex;
     justify-content: center;
-    align-items: center;
-    flex-direction: column;
+  }
 }
 
+/* RESTAURANTS */
+
+.menu {
+  background-color: #f6f6f6;
+}
+.menu h2 {
+  margin-bottom: 2rem;
+  padding: 2rem;
+  margin: 0;
+}
+.card {
+  border: 1px solid black;
+  height: 4rem;
+  flex-grow: 1;
+  min-width: 30rem;
+}
+.menu_cards {
+  display: grid;
+  gap: 2rem;
+  grid-template-columns: repeat(2);
+}
+.card {
+  background-color: white;
+  height: auto;
+  width: 95%;
+  border-radius: 2rem 2rem 0 0;
+}
+.card_image img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 2rem 2rem 0 0;
+}
+.card_image {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 2rem 2rem 0 0;
+}
