--- a/sass/pages/restaurant.scss
+++ b/sass/pages/restaurant.scss
@@ -73,19 +73,24 @@ body {
     .menu-groupe {
       
       overflow: hidden;
-        white-space: nowrap;
-        text-overflow: ellipsis;
+       
       
       
       .menu-items {
+        $numberOfItems: 3;
+        @for $i from 1 through $numberOfItems {
+          &:nth-child(#{$i}){
+            animation-delay: 100ms * $i;
+          }
         background-color: white;
         display: flex;
         overflow: hidden;
         @include mixins.base-shadow;
         border-radius: 1rem;
-        
         overflow: hidden;
         margin: 0.5rem;
+        animation: appear 1s;
+        animation-fill-mode: both;
         
         text-overflow: ellipsis;
         .description-items {
@@ -162,4 +167,5 @@ body {
 
   }
 }
-}
+    }
+  }
