--- a/public/css/style.css
+++ b/public/css/style.css
@@ -49,6 +49,16 @@ main .city i {
   color: black;
 }
 
+@keyframes appear {
+  0% {
+    transform: translateY(50%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
 .explorer {
   text-align: center;
   background-color: #f3f3f3;
@@ -82,6 +92,39 @@ main .city i {
   opacity: 0.9;
 }
 
+.loader {
+  position: fixed;
+  display: grid;
+  place-items: center;
+  background-color: #ffffff;
+  height: 100vh;
+  inset: 0;
+  z-index: 1;
+  opacity: 0.9;
+  animation: disappear 200ms 2s forwards;
+  transform-origin: top;
+}
+.loader::after {
+  content: "";
+  height: 100px;
+  width: 100px;
+  border-right: 5px solid transparent;
+  border-top: 5px solid #9356dc;
+  border-radius: 50%;
+  animation: spin 1s infinite linear;
+  animation-iteration-count: 2;
+}
+
+@keyframes disappear {
+  to {
+    transform: scale(0);
+  }
+}
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
 .tuto li {
   list-style-type: none;
   flex-grow: 1;
@@ -288,6 +331,16 @@ footer i {
   gap: 1rem;
 }
 
+@keyframes appear {
+  0% {
+    transform: translateY(50%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
 body {
   background-color: #f6f6f6;
 }
@@ -409,8 +462,6 @@ body {
 }
 .menu-grid .menu-groupe {
   overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
 }
 .menu-grid .menu-groupe .menu-items {
   background-color: white;
@@ -420,7 +471,32 @@ body {
   border-radius: 1rem;
   overflow: hidden;
   margin: 0.5rem;
+  animation: appear 1s;
+  animation-fill-mode: both;
   text-overflow: ellipsis;
+  background-color: white;
+  display: flex;
+  overflow: hidden;
+  box-shadow: 2px 1px 8px -3px rgba(0, 0, 0, 0.75);
+  border-radius: 1rem;
+  overflow: hidden;
+  margin: 0.5rem;
+  animation: appear 1s;
+  animation-fill-mode: both;
+  text-overflow: ellipsis;
+  background-color: white;
+  display: flex;
+  overflow: hidden;
+  box-shadow: 2px 1px 8px -3px rgba(0, 0, 0, 0.75);
+  border-radius: 1rem;
+  overflow: hidden;
+  margin: 0.5rem;
+  animation: appear 1s;
+  animation-fill-mode: both;
+  text-overflow: ellipsis;
+}
+.menu-grid .menu-groupe .menu-items:nth-child(1) {
+  animation-delay: 100ms;
 }
 .menu-grid .menu-groupe .menu-items .description-items {
   padding: 1rem;
@@ -471,11 +547,115 @@ body {
     transform: rotate(0);
   }
 }
-.menu-grid .command {
+.menu-grid .menu-groupe .menu-items:nth-child(2) {
+  animation-delay: 200ms;
+}
+.menu-grid .menu-groupe .menu-items .description-items {
+  padding: 1rem;
+  overflow: hidden;
+}
+.menu-grid .menu-groupe .menu-items .description-items h4, .menu-grid .menu-groupe .menu-items .description-items p {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+.menu-grid .menu-groupe .menu-items .price {
+  margin-left: auto;
+  font-weight: 900;
+  padding: 1rem;
+  display: flex;
+  align-items: flex-end;
+}
+.menu-grid .menu-groupe .menu-items .items__check {
+  display: grid;
+  place-items: center;
+  flex-shrink: 0;
+  background-color: #99E2D0;
+  margin-right: -4rem;
+  width: 4rem;
+  border-radius: 0 1rem 1rem 0;
+  transition: margin-right 0.5s;
+}
+.menu-grid .menu-groupe .menu-items i {
+  background-color: white;
+  width: 2rem;
+  aspect-ratio: 1;
+  border-radius: 1rem;
+  display: grid;
+  place-items: center;
+  color: #99E2D0;
+}
+.menu-grid .menu-groupe .menu-items:hover .items__check {
+  margin-right: 0;
+}
+.menu-grid .menu-groupe .menu-items:hover i {
+  animation: quarterspin 0.5s ease-in-out;
+}
+@keyframes quarterspin {
+  0% {
+    transform: rotate(-270deg);
+  }
+  100% {
+    transform: rotate(0);
+  }
+}
+.menu-grid .menu-groupe .menu-items:nth-child(3) {
+  animation-delay: 300ms;
+}
+.menu-grid .menu-groupe .menu-items .description-items {
+  padding: 1rem;
+  overflow: hidden;
+}
+.menu-grid .menu-groupe .menu-items .description-items h4, .menu-grid .menu-groupe .menu-items .description-items p {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+.menu-grid .menu-groupe .menu-items .price {
+  margin-left: auto;
+  font-weight: 900;
+  padding: 1rem;
+  display: flex;
+  align-items: flex-end;
+}
+.menu-grid .menu-groupe .menu-items .items__check {
+  display: grid;
+  place-items: center;
+  flex-shrink: 0;
+  background-color: #99E2D0;
+  margin-right: -4rem;
+  width: 4rem;
+  border-radius: 0 1rem 1rem 0;
+  transition: margin-right 0.5s;
+}
+.menu-grid .menu-groupe .menu-items i {
+  background-color: white;
+  width: 2rem;
+  aspect-ratio: 1;
+  border-radius: 1rem;
+  display: grid;
+  place-items: center;
+  color: #99E2D0;
+}
+.menu-grid .menu-groupe .menu-items:hover .items__check {
+  margin-right: 0;
+}
+.menu-grid .menu-groupe .menu-items:hover i {
+  animation: quarterspin 0.5s ease-in-out;
+}
+@keyframes quarterspin {
+  0% {
+    transform: rotate(-270deg);
+  }
+  100% {
+    transform: rotate(0);
+  }
+}
+.menu-grid .menu-groupe .command {
   display: flex;
   justify-content: center;
 }
-.menu-grid .command button {
+.menu-grid .menu-groupe .command button {
   cursor: pointer;
   background-image: linear-gradient(to top, #9356dc, #ff79da);
   color: white;
@@ -487,7 +667,7 @@ body {
   transition: 200ms;
   margin-top: 1rem;
 }
-.menu-grid .command:hover {
+.menu-grid .menu-groupe .command:hover {
   transform: scale(1.02);
   opacity: 0.9;
 }
