--- a/sass/layout/explorer.scss
+++ b/sass/layout/explorer.scss
@@ -1,3 +1,6 @@
+@use "../utils/mixins.scss";
+@use "../utils/colors.scss";
+@use "../utils/animation.scss";
 .explorer {
     text-align: center;
     background-color: #f3f3f3;
@@ -26,3 +29,40 @@
     transform: scale(1.02);
     opacity: 0.9;
   }
+  .loader {
+    $animation-duration: 1s;
+    $animation-count: 2;
+    position: fixed;
+    display:grid;
+    place-items: center;
+    background-color: #ffffff;
+    height: 100vh;
+    inset: 0;
+    z-index: 1;
+    opacity: 0.9;
+    animation: disappear 200ms $animation-duration * $animation-count forwards;
+    transform-origin: top;
+    &::after {
+      content: "";
+      height: 100px;
+      width: 100px;
+      border-right: 5px solid transparent;
+      border-top: 5px solid colors.$purple;
+      border-radius: 50%;
+      animation: spin $animation-duration infinite linear;
+      animation-iteration-count: 2;
+    }
+  }
+  
+  @keyframes disappear {
+    to {
+      transform: scale(0);
+    }
+  }
+  
+  @keyframes spin {
+    to {
+      transform: rotate(360deg);
+    } 
+  }
+  
