--- a/sass/layout/tuto.scss
+++ b/sass/layout/tuto.scss
@@ -32,6 +32,9 @@
   .tuto {
     margin-top: 2rem;
     margin-bottom: 2rem;
+    padding-bottom: 2rem;
+    padding-top: 1rem;
+    background-color: white;
   }
   .tuto ol {
     gap: 1rem;
