--- a/sass/layout/explorer.scss
+++ b/sass/layout/explorer.scss
@@ -3,16 +3,20 @@
 @use "../utils/animation.scss";
 .explorer {
     text-align: center;
-    background-color: #f3f3f3;
     padding-bottom: 3rem;
+    background-color: #f3f3f3;
+    padding-bottom: 2rem;
   }
   .explorer h2 {
     margin: 0;
     font-size: 25px;
     padding-top: 2.5rem;
+    margin-bottom: 1rem;
+  
   }
   .explorer p {
     font-size: 1rem;
+    margin-bottom: 1rem;
   }
   .explorer button {
     background-image: linear-gradient(to top, #9356dc, #ff79da);
