--- a/sass/pages/restaurant.scss
+++ b/sass/pages/restaurant.scss
@@ -1,87 +1,87 @@
 @use "../utils/mixins.scss";
-@use "../utils/colors.scss"; 
+@use "../utils/colors.scss";
 @use "../utils/variables.scss";
 @use "../utils/animation.scss";
 
 body {
-    background-color: colors.$lightergrey;
+  background-color: colors.$lightergrey;
 }
 
 .banner img {
-    width: 100%;
-    height: 70vh;
-    object-fit: cover;
-    object-position: center;
-  }
-  #page-resto {
-    header {
-      &:hover::before {
-        @include mixins.transform-zoom($zoom-level: 1.2, $transformation: translateY(-50%));
-      }
-      &::before {
-        @include mixins.font-awesome($font-weight: 900);
-        content: "\f060";
-        left: 1rem;
-        top: 50%;
-        transform: translateY(-50%);
-        font-size: 20px;
-        transition: transform 200ms;
-      }
+  width: 100%;
+  height: 70vh;
+  object-fit: cover;
+  object-position: center;
+}
+#page-resto {
+  header {
+    &:hover::before {
+      @include mixins.transform-zoom(
+        $zoom-level: 1.2,
+        $transformation: translateY(-50%)
+      );
     }
+    &::before {
+      @include mixins.font-awesome($font-weight: 900);
+      content: "\f060";
+      left: 1rem;
+      top: 50%;
+      transform: translateY(-50%);
+      font-size: 20px;
+      transition: transform 200ms;
+    }
+  }
 }
 .resto__title {
-    margin-top: -3rem;
-    h2 {
-      padding: 2rem 1rem;
-      font-family: "Shrikhand", "cursive";
-      @include mixins.heart-animated;
-      border-radius: 2rem 2rem 0 0;
-      background-color: colors.$lightergrey;
-      &:hover::after {
-        opacity: 1;
-        transform: translateY(-50%) scale(1.1);
-      }
-    }
-  }
-  .resto-main {
-    padding: 1rem;
+  margin-top: -3rem;
+  h2 {
+    padding: 2rem 1rem;
+    font-family: "Shrikhand", "cursive";
+    @include mixins.heart-animated;
+    border-radius: 2rem 2rem 0 0;
     background-color: colors.$lightergrey;
-  }
-  .menu-grid {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 1rem;
-    @media (max-width: variables.$breakpoint) {
-      grid-template-columns: 1fr;
+    &:hover::after {
+      opacity: 1;
+      transform: translateY(-50%) scale(1.1);
     }
-    h3 {
-      text-transform: uppercase;
-      font-weight: 400;
-      position: relative;
-      &::after {
-        content: "";
-        height: 0.25rem;
-        width: 3rem;
-        background-color: colors.$color-tertiary;
-        position: absolute;
-        top: 1.5rem;
-        left: 0;
-
-      }
+  }
 }
-  
-    .menu-groupe {
-      
-      overflow: hidden;
-       
-      
-      
-      .menu-items {
-        $numberOfItems: 3;
-        @for $i from 1 through $numberOfItems {
-          &:nth-child(#{$i}){
-            animation-delay: 100ms * $i;
-          }
+.resto-main {
+  padding: 1rem;
+  background-color: colors.$lightergrey;
+}
+.menu-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 1rem;
+  @media (max-width: variables.$breakpoint) {
+    grid-template-columns: 1fr;
+  }
+
+  h3 {
+    text-transform: uppercase;
+    font-weight: 300;
+    position: relative;
+    &::after {
+      content: "";
+      height: 0.25rem;
+      width: 3rem;
+      background-color: colors.$color-tertiary;
+      position: absolute;
+      top: 1.5rem;
+      left: 0;
+    }
+  }
+
+  .menu-groupe {
+    overflow: hidden;
+
+    .menu-items {
+      $numberOfItems: 3;
+      @for $i from 1 through $numberOfItems {
+        &:nth-child(#{$i}) {
+          animation-delay: 100ms * $i;
+        }
         background-color: white;
         display: flex;
         overflow: hidden;
@@ -89,20 +89,20 @@ body {
         border-radius: 1rem;
         overflow: hidden;
         margin: 0.5rem;
-        animation: appear 1s;
+        animation: appear 2s;
         animation-fill-mode: both;
-        
+
         text-overflow: ellipsis;
         .description-items {
           padding: 1rem;
           overflow: hidden;
-        
-        h4, p {
-          overflow: hidden;
-        white-space: nowrap;
-        text-overflow: ellipsis;
-        }
-          
+
+          h4,
+          p {
+            overflow: hidden;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+          }
         }
         .price {
           margin-left: auto;
@@ -133,39 +133,27 @@ body {
         }
         &:hover {
           .items__check {
-          margin-right: 0;
-        }
-        i {
-          @include animation.quarterspin;
-          animation: quarterspin 0.5s ease-in-out;
+            margin-right: 0;
+          }
+          i {
+            @include animation.quarterspin;
+            animation: quarterspin 0.5s ease-in-out;
+          }
         }
       }
-
-      }
-
     }
-      
-  .command {
-    display: flex;
-    justify-content: center;
- 
-  button {
-    cursor: pointer;
-    background-image: linear-gradient(to top, #9356dc, #ff79da);
-  color: white;
-  font-size: 20px;
-  padding: 1rem 2rem;
-  border-radius: 2rem;
-  border: none;
-  box-shadow: 1px 8px 17px -7px rgba(0, 0, 0, 0.75);
-  transition: 200ms;
-  margin-top: 1rem;
-  }
-  &:hover {
-    transform: scale(1.02);
-  opacity: 0.9;
-
   }
 }
+
+.order {
+  height: 40vh;
+  display: grid;
+  place-items: center;
+  button {
+    @include mixins.base-button;
+    &:hover {
+      transform: scale(1.02);
+      opacity: 0.9;
     }
   }
+}
