--- a/sass/utils/mixins.scss
+++ b/sass/utils/mixins.scss
@@ -16,9 +16,8 @@
   transform: $transformation scale($zoom-level);
 }
 @mixin base-shadow {
-  box-shadow: 2px 1px 8px -3px  rgb(0 0 0 / 75%);
+  box-shadow: 2px 1px 8px -3px rgb(0 0 0 / 75%);
 }
-
 
 @mixin font-awesome($font-weight: 400) {
   display: inline-block;
@@ -52,5 +51,22 @@
   &:hover::after {
     opacity: 1;
     transform: translateY(-50%) scale(1.1);
+  }
+}
+@mixin base-button{
+  color: white;
+  font-weight: 300;
+  font-size: 1.5rem;
+  padding: 1rem 2rem;
+  border: none;
+  border-radius: 2rem;
+  transition: all 200ms;
+  margin-top: 1rem;
+  cursor: pointer;
+  @include base-shadow;
+  @include gradient;
+  &:hover {
+    transform: scale(1.02);
+    opacity: 0.9;
   }
 }
